--- a/color/default.css
+++ b/color/default.css
@@ -1,42 +1,42 @@
 a:hover,
 a:focus {
-    color: #FE7A66;
+    color: #CB0D18;
 }
 
 a,.tp-caption a.btn:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 .top-nav-collapse {
-	background: #FE7A66;
+	background: #CB0D18;
 }
 
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 
-.team-wrapper-big:hover .team-wrapper-overlay, .team-wrapper-small:hover .team-wrapper-overlay { background: #FE7A66; }
+.team-wrapper-big:hover .team-wrapper-overlay, .team-wrapper-small:hover .team-wrapper-overlay { background: #CB0D18; }
 
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span {
-    background-color: #FE7A66;
+    background-color: #CB0D18;
 }
 
 .widget-avatar .avatar:hover {
-    border: 5px solid #FE7A66;
+    border: 5px solid #CB0D18;
 }
 
 .bg-skin {
-	background: #FE7A66;
+	background: #CB0D18;
 }
 
 .highlight-color {
-	background-color: #FE7A66;
+	background-color: #CB0D18;
 }
 
 
 /* pricing box  */
 .pricing-box.skin {
-	background: #FE7A66;
+	background: #CB0D18;
 }
 
 
@@ -48,23 +48,23 @@ a,.tp-caption a.btn:hover {
 /* blog */
 
 ul.comment-meta li a:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 
 ul.comment-meta li.reply a {
-	background: #FE7A66;
+	background: #CB0D18;
 }
 
 .pagination > li > a,
 .pagination > li > span {
-  color: #FE7A66;
+  color: #CB0D18;
 }
 
 .pagination > li > a:hover,
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #FE7A66;
+  color: #CB0D18;
 }
 
 .pagination > .active > a,
@@ -73,43 +73,43 @@ ul.comment-meta li.reply a {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #FE7A66;
-  border-color: #FE7A66;
+  background-color: #CB0D18;
+  border-color: #CB0D18;
 }
 .sidebar .widget ul li a:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 
 .widget .tagcloud a {
-  background: #FE7A66;
+  background: #CB0D18;
 }
 
-.flex-control-paging li a.flex-active { background: #FE7A66;
+.flex-control-paging li a.flex-active { background: #CB0D18;
 	}
 /* team */
 .team-box {
-	background: #FE7A66;
+	background: #CB0D18;
 }
 
 form#contact-form input:focus,form#contact-form select:focus,form#contact-form textarea:focus {
-	border-color: #FE7A66;
+	border-color: #CB0D18;
 }
 form.search-form input:focus {
-	border-color: #FE7A66;
+	border-color: #CB0D18;
 }
 
 /* footer */
 ul.footer-menu li a:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 
 footer a.totop:hover {
-	color: #FE7A66;
+	color: #CB0D18;
 }
 
 
 .btn-skin {
   color: #fff;
-  background-color: #FE7A66;
-  border-color: #FE7A66;
+  background-color: #CB0D18;
+  border-color: #CB0D18;
 }
